--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/vue": "^5.0.7",
+    "@auth/core": "^0.39.1",
     "@fontsource-variable/dm-sans": "^5.2.5",
     "@fontsource-variable/eb-garamond": "^5.2.5",
     "@fontsource-variable/gabarito": "^5.2.5",
@@ -31,6 +32,7 @@
     "astro": "^5.5.2",
     "astro-color-scheme": "^1.1.5",
     "astro-sheet-loader": "^1.0.5",
+    "auth-astro": "^4.2.0",
     "dotenv": "^16.4.7",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
